# control_allocation

./: .gitignore  .gitmodules  BoundedRevisedSimplex.cpp  BoundedRevisedSimplex.m  DP_LPCA.m  DP_LPCA_based_prio.m  DPscaled_LPCA.m  DPscaled_LPCA_based_prio.m  DPscaled_LPCA_based_prio_by_m1.m  F18.m  Generate_input_data.m  README.md  SHC09.m  SHW09_vtol.m  csv_topics_to_d.m  data.csv  demo_helix3d.m  df4.m  df6.m  difference.m  direct_alloc.m  example7_4.m  gazebo_iris_model.m  growing_spheres_demo.m  input.csv  input.mat  iris.m  main_control_allocation_benchmark.m  matlab.mat  new_DP_LPCA.m  output.csv  parse_control_allocation_flight_data.m  plot_actuator.m  plot_all_results.m  plot_control_allocation_results.m  plot_fly_log_states.m  plot_setpoint_response.m  plot_setpoint_response_CN.m  plot_test_results.m  print_control_allocation_comparison.m  (+51 more)
LP/: DPscaled_LPCA_C.m  Simplex_loop_C.m  Simplex_loop_matlab.m  Simplex_loop_mch.m  allocator_dir_LPwrap_4.m  allocator_dir_simplex_4.m  allocator_dir_simplex_4_v2.m  allocator_dir_simplex_4_v3.m  dir_alloc_linprog.m  dir_alloc_mch.m  dir_alloc_mch.prj  dir_alloc_mch.prj.bak  dir_alloc_simplex.m  dir_ca_4df.m  dir_linprog_ca_4df.m  direct_alloc.m  fly.mat  inv_mch.m  inv_mvh.m  linprog_dir_alloc.m  pivot_C.m  pivot_matlab.m  pivot_mch.m  simplxuprevsol_C.m  test.m  two_dir_alloc_mch.m  variables.mat  wls_alloc_mch.m  wls_alloc_mch_tdf.m  抖动原因.txt  控制分配代码转换说明.txt
LP_allocator/: DPscaled_LPCA_C.m  dir_alloc_linprog.m
LP_lib/lp_tiny/: .gitignore  CMakeLists.txt  Makefile  README  eval_lp_tiny.c  lapack_decl.h  lp_tiny.h  test_allocation.c  test_input_alloc.cpp  test_lp_tiny.c
New_LP_dir/: dir_alloc_sim_new.m  dir_alloc_sim_new.prj  dir_alloc_sim_new_mex.mexmaca64  inv_mch.m  variables.mat
PCA/: DP_LPCA.m  DP_LPCA_based_prio.m  DP_LPCA_based_prio_acc.m  DP_LPCA_copy.m  DP_LPCA_copy1.m  DP_LPCA_prio.m  DP_LPCA_prio1.m  DPscaled_LPCA.m  DPscaled_LPCA_based_prio.m  DPscaled_LPCA_copy.m  PCA_case1.m  PCA_case2.m  prio_alloc_incre.m  prioritized_alloc.m  prioritized_control_allocator.m  simplxuprevsol.m  simplxuprevsol_tiebreak.m  two_dir_alloc_df4.m  two_dir_alloc_mch.m  vview_case.m
QP/: dyn_alloc_m.m  dyn_alloc_m.prj  dyn_alloc_m1.m  dyn_alloc_m_mex.mexw64  dyn_ca_4df.m  dyn_ca_mch.prj  matlab同名函数调用问题.txt  motor.m  plot_actuator.m  qp_ca_mch.m  qp_ca_mch.prj  test.m  test.txt  test_for_redefine_f.m  var_by_if.m  wls_alloc_incre.m  wls_alloc_m.m  wls_alloc_m.prj  wls_alloc_mch.m  wls_alloc_mch.prj  wls_alloc_mul.m  wls_ca_4df.m  (+1 more)
alloc_based_LP_cpp/: CMakeLists.txt  README.md  main.cpp
alloc_based_LP_cpp/alglib/src/: alglibinternal.cpp  alglibinternal.h  diffequations.h  fasttransforms.h  kernels_avx2.h  linalg.h  optimization.h  specialfunctions.cpp  statistics.cpp
alloc_based_LP_cpp/alglib/tests/: test_i.cpp
alloc_based_LP_cpp/src/: main.cpp
alloc_based_LP_cpp/src/ControlAllocation/: ControlAllocation.cpp  ControlAllocation.h  template.cpp
alloc_based_LP_cpp/src/LPWrap/: DPscaled_LPCA.cpp  LPwrap_test.cpp  main_gpt.cpp  new_simplex.cpp  rtwtypes.h
alloc_based_LP_cpp/test/: Untitled-1.cpp  main.cpp  main_gpt.cpp  new_simplex.cpp  px4_matrix_alloc.cpp
alloc_cpp/alglib/: CMakeLists.txt  manual.cpp.html
alloc_cpp/alglib/src/: alglibmisc.cpp  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  integration.cpp  integration.h  interpolation.h  kernels_fma.cpp  kernels_sse2.cpp  kernels_sse2.h  solvers.cpp  solvers.h
alloc_cpp/alglib/tests/: test_x.cpp
lib/: check.m
(+325 files in other folders)
